	* Definitions cache now uses soft references
	* Added an option to not display 'and' definitions in blue in the outline
	
* 1.0.8 (July 29 2007)
	* Now, completion gives elements found in other modules even if there is no associated mli
	* Corrected a rare bug with syntax-coloring of ocamldoc comments
	* Now, a different (red) icon appears in completion results for modules that couldn't be parsed
	* Changed the 'let in' icon in the outline: now, the (+) icon only appears when the definition is at toplevel
	* The integrated lexer now supports linenum directives
	* Added an outline for ocamlyacc files (showing non-terminals) 
	* Fixed a bug with non-rec definitions that would act as rec in hyperlinks
	* Corrected some bugs with the 'unnest let in definitions' option in outline
	
* 1.1.0 (Aug 02 2007)
	* Added support for ocamlbuild projects (reset the O'Caml perspective to get the project shortcut)
	* Type annotations are searched first in ml folder, then in _build + ml folder 
	* Big change in Ocaml Browser: now you can add new locations (right-click on tree), and the loading and parsing is done lazily (when you expand a node)
	* Fixed yet another bug with hyperlinks  
	* Fixed a bug in the lexer (with line labels)   
	* Fixed another bug in the lexer with the '"' character inside comments    
	* Added separate color preferences for 'let','in' and 'fun','function' keywords
	* Added optional syntax coloring of punctuation 
	* Corrected a bug in the paths preference page on Windows
	* Added '*.obj' and '_build' in the list of navigator filters 
	* Hid some resources from versioning system (*.cmo, *.annot, ...). If you ever need to commit these resources, see "Window > Preferences > Team > Ignored Resources".   
	 
* 1.1.1 (August 21 2007) 
	* New menu action for opening the currently opened file counterpart (interface/implementation)
	* Support for camlp4 preprocessing 	
	
* 1.2.0
	* Code formatter rewrite
	
	
	
	
	