@@ -3,6 +3,8 @@ package ocaml.views.toplevel;
 import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.Map;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -23,8 +25,7 @@ import org.eclipse.swt.graphics.Point;
 import org.eclipse.swt.widgets.Display;
 
 /**
- * Implements the interaction between the top-level view and the real top-level (the underlying
- * process)
+ * Implements the interaction between the top-level view and the real top-level (the underlying process)
  */
 public class Toplevel {
 
@@ -67,14 +68,14 @@ public class Toplevel {
 	ArrayList<String> history = new ArrayList<String>();
 
 	/**
-	 * The currently edited expression (we save it if the user started typing something then decided
-	 * to recall history)
+	 * The currently edited expression (we save it if the user started typing something then decided to recall
+	 * history)
 	 */
 	String currentLine = "";
 
 	/**
-	 * Up to which level did we go back in the history? ( in the interval [-1; history.size()], -1
-	 * meaning the line currently being edited, and not yet in history.
+	 * Up to which level did we go back in the history? ( in the interval [-1; history.size()], -1 meaning the
+	 * line currently being edited, and not yet in history.
 	 */
 	private int iHistory = -1;
 
@@ -123,8 +124,7 @@ public class Toplevel {
 
 			@Override
 			public void keyPressed(KeyEvent e) {
-				
-				
+
 				if (e.character == '\r' && ((e.stateMask & SWT.CTRL) > 0)) { // <Ctrl> + <return>
 					eval(userText.getText());
 					e.doit = false;
@@ -155,7 +155,7 @@ public class Toplevel {
 				}
 			}
 		});
-		
+
 		this.resultText = resultText;
 		this.resultText.setEditable(false);
 	}
@@ -169,8 +169,8 @@ public class Toplevel {
 	 * Go back in the history of entered commands.
 	 * 
 	 * @param bOnlySingleLine
-	 *            whether we must go back in history only if the currently edited expression is on a
-	 *            single line (this allows us to continue using arrow keys in multi-line commands)
+	 *            whether we must go back in history only if the currently edited expression is on a single
+	 *            line (this allows us to continue using arrow keys in multi-line commands)
 	 */
 	protected void historyPrev(final boolean bOnlySingleLine) {
 		Display.getDefault().asyncExec(new Runnable() {
@@ -194,8 +194,8 @@ public class Toplevel {
 	 * Go forward in history.
 	 * 
 	 * @param bOnlySingleLine
-	 *            whether we must go back in history only if the currently edited expression is on a
-	 *            single line (this allows us to continue using arrow keys in multi-line commands)
+	 *            whether we must go back in history only if the currently edited expression is on a single
+	 *            line (this allows us to continue using arrow keys in multi-line commands)
 	 */
 	protected void historyNext(final boolean bOnlySingleLine) {
 		Display.getDefault().asyncExec(new Runnable() {
@@ -228,7 +228,7 @@ public class Toplevel {
 	protected synchronized void sendText() {
 		synchronized (resultText) {
 			String text = userText.getText();
-			//System.err.println("<< '" + text + "'");
+			// System.err.println("<< '" + text + "'");
 			if (text.equals("kill" + newline)) {
 				kill();
 				userText.setText("");
@@ -284,8 +284,7 @@ public class Toplevel {
 		int docLength = resultText.getText().length();
 		int length = text.length();
 
-		resultText
-				.setStyleRange(new StyleRange(docLength - length - 1, length, colorUserText, null));
+		resultText.setStyleRange(new StyleRange(docLength - length - 1, length, colorUserText, null));
 	}
 
 	public void help() {
@@ -317,21 +316,30 @@ public class Toplevel {
 		try {
 			if (OcamlPlugin.runningOnLinuxCompatibleSystem()) {
 				/*
-				 * Here, we try to get the pid of our process by comparing the list of pids before
-				 * and after starting it.
+				 * Here, we try to get the pid of our process by comparing the list of pids before and after
+				 * starting it.
 				 */
 
 				// get the pid of the processes before running our process
-				CommandRunner cr = new CommandRunner(
-						new String[] { "ps", "-A", "-o", "pid,ucomm" }, OcamlPlugin
-								.getPluginDirectory());
+				CommandRunner cr = new CommandRunner(new String[] { "ps", "-A", "-o", "pid,ucomm" },
+						OcamlPlugin.getPluginDirectory());
 				String result = cr.getStdout();
 				Integer[] pidsBefore = getOcamlPids(result);
 
 				// start the top-level process
 				try {
-					exec = ExecHelper.execMerge(execEvents, new String[] { OcamlPlugin
-							.getOcamlFullPath() });
+					Map<String, String> environment = new HashMap<String, String>();
+					environment.putAll(System.getenv());
+					/*
+					 * The O'Caml toplevel prints special formatting characters when it detects a compatible
+					 * terminal. So, we set the TERM variable to a kind of terminal it doesn't know (so that
+					 * it will print the standard "^^^" characters to show errors.
+					 */
+					environment.put("TERM", "eclipse");
+
+					exec = ExecHelper.execMerge(execEvents, new String[] { OcamlPlugin.getOcamlFullPath() },
+							environment, null);
+					
 				} catch (Throwable e) {
 					if (exec == null)
 						resultText.append("Error: couldn't start toplevel.\n"
@@ -347,8 +355,8 @@ public class Toplevel {
 					retries++;
 
 					// get the pid of the processes after running our process
-					cr = new CommandRunner(new String[] { "ps", "-A", "-o", "pid,ucomm" },
-							OcamlPlugin.getPluginDirectory());
+					cr = new CommandRunner(new String[] { "ps", "-A", "-o", "pid,ucomm" }, OcamlPlugin
+							.getPluginDirectory());
 					result = cr.getStdout();
 
 					Integer[] pidsAfter = getOcamlPids(result);
@@ -455,16 +463,16 @@ public class Toplevel {
 
 					int length = resultText.getText().length();
 
-					resultText.setStyleRange(new StyleRange(length - error.length(),
-							error.length(), colorErrorText, null));
+					resultText.setStyleRange(new StyleRange(length - error.length(), error.length(),
+							colorErrorText, null));
 
 				}
 			}
 		});
 	}
 
-	Pattern patternErrors = Pattern.compile("Characters (?:\\d+)-(?:\\d+):" + nl + "(.*)" + nl
-			+ "(\\s*\\^*)" + nl);
+	Pattern patternErrors = Pattern.compile("Characters (?:\\d+)-(?:\\d+):" + nl + "(.*)" + nl + "(\\s*\\^*)"
+			+ nl);
 
 	protected synchronized void receiveOutput(final String output) {
 		Display.getDefault().asyncExec(new Runnable() {
@@ -476,7 +484,7 @@ public class Toplevel {
 				synchronized (resultText) {
 					if ("".equals(output.trim()))
 						return;
-					//System.err.println(">> '" + output + "'");
+					// System.err.println(">> '" + output + "'");
 					resultText.append(output);
 
 					String doc = resultText.getText();
@@ -497,10 +505,10 @@ public class Toplevel {
 							int rangeStart = start + range.x;
 							int rangeEnd = start + range.y;
 
-							if (start < 0 || start > doc.length() - 1 || end < 0
-									|| end > doc.length() - 1 || end <= start || rangeStart < 0
-									|| rangeEnd < 0 || rangeStart > doc.length() - 1
-									|| rangeEnd > doc.length() - 1 || rangeEnd <= rangeStart) {
+							if (start < 0 || start > doc.length() - 1 || end < 0 || end > doc.length() - 1
+									|| end <= start || rangeStart < 0 || rangeEnd < 0
+									|| rangeStart > doc.length() - 1 || rangeEnd > doc.length() - 1
+									|| rangeEnd <= rangeStart) {
 
 								OcamlPlugin
 										.logError("error : index out of bounds while trying to highlight errors");
@@ -509,8 +517,8 @@ public class Toplevel {
 
 							resultText.replaceTextRange(start, length, line + "\n");
 
-							resultText.setStyleRange(new StyleRange(rangeStart, rangeEnd
-									- rangeStart, colorWhite, colorRed));
+							resultText.setStyleRange(new StyleRange(rangeStart, rangeEnd - rangeStart,
+									colorWhite, colorRed));
 
 							doc = resultText.getText();
 							matcher = patternErrors.matcher(doc);
